[workspace]
resolver = "3"
members = ["./network", "./runtime", "./storage"]

[workspace.dependencies]
anyhow = "1.0.100"
kube = "2.0.1"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost-types = "0.14.1"
