[package]
name = "dreibein-csi-driver"
version = "0.1.0"
edition = "2024"

[build-dependencies]
anyhow = { workspace = true }
tonic-prost-build = "0.14.2"

[dependencies]
anyhow = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost-types = { workspace = true }
